css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, sans-serif;
    overflow: hidden;
}
.container{
    max-width: 1700px;
}
.margin-zero{
    margin: 0 auto;
}
img{
    margin-right: 0;
    width: 100%;
    height: 100%;
    padding-right: 5px;
}
header{
    background-color: black;
    padding-bottom: 50px;
    height: 60px;
}
.row{
    display: flex;
    flex-wrap: wrap;
}
.col-100{
    width: 100%;
}
.label-container{
    display: flex;
    justify-content: end;
}
.white-text{
    color: white;
}
.label{
    padding: 5px 5px;
    border-radius: 4px;
    margin: 10px 5px 0px 5px;
    font-size: 1.7vh;
}
.bg-grey{
    background-color: rgb(90, 90, 90);
}
main{
    background-color: black;
    height: calc(100vh - 140px);
    overflow-y: auto;
}
.col-14{
    width: calc(100% / 7);
}
.main-content{
    position: relative;
    margin-bottom: 10px;
}
.username{
    position: absolute;
    z-index: 1;
    bottom: 0px;
    left: 0px;
}
.bg-lightblack{
    background-color: rgba(0, 0, 0, 0.336);
    padding: 7px 7px;
    font-size: 1.5vh;
}
footer {
    width: 100%;
    background-color: #2b2b2b;
    padding: 10px 0;
    height: 80px;
}
.toolbar {
    display: flex;
    width: 100%;
}
.toolbar-container{
    align-items: center;
}
.toolbar-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 10px;
    cursor: pointer;
}
.toolbar-item i {
    font-size: 3vh;
    margin-bottom: 5px;
}
.col-20-left {
    width: 20%;
    display: flex;
    justify-content: flex-start;
}
.col-60{
    width: 60%;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
}
.col-20-right{
    width: 20%;
    justify-content: flex-end;
    display: flex;
    align-items: center;
}
.green{
    color: green;
}
.end-meeting{
    color: red;
    background-color: #6d6d6d3d;
    padding: 20px;
    margin-right: 10px;
}

